fix: admin self registration should use repository's API